<resources>
    <string name="app_name">Logica</string>
    <string name="conjunction_and">Conjunction (AND)</string>
    <string name="b">B</string>
    <string name="a_b">A ^ B</string>
    <string name="a">A</string>
    <string name="t_or_f">T or F</string>
    <string name="questionT">T</string>
    <string name="questionF">F</string>
    <string name="submit">Submit</string>
    <string name="correct">Right Answer!</string>
    <string name="incorrect">Too bad!</string>
    <string name="answersemptywarning">Please fill in your answers</string>
</resources>
